--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,5 +3,52 @@
 /*
 PALETA DE CORES
 VERDE:#49a09d
-Lilas: #5f2c82
-*/
+Lilas: #5f2c82*/
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+
+
+body, html{
+    background-color: rgb(121, 40, 10);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
+}
+
+#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+
+}
+
+#imagem{
+    background: rgb(121, 40, 10) url(../imagens/pizza.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    display: block;
+}
+
+#formulario{
+    padding: 10px;
+    display: block;
+
+}
