--- a/estilos/media.css
+++ b/estilos/media.css
@@ -50,5 +50,11 @@ grandes telas: acima de 1200px
         float: right;
         width: 50%;
     }
+    #formulario h1{
+    font-size: 2em;
+}
+    #formulario p{
+        font-size: 1.2em;
+    }
     
 }
