--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ main{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
@@ -62,5 +62,57 @@ main{
 }
 
 #formulario p{
+    font-size: 0.8em;
+}
+
+.campo{
+    background-color: rgba(255, 68, 0, 0.486);
+    height:40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form label{
+    display: none;
+}
+
+
+input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color: brown;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+input[type=submit]:hover{
+    background-color: rgba(165, 42, 42, 0.541);
+
+}
+
+a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    border: 1px solid brown;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+
+}
+a.botao:hover{
+    background-color: rgba(165, 42, 42, 0.801);
+}
+
+a.botao i{
     font-size: 0.8em;
 }
