--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ main{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
 
     background-color: white;
     width: 250px;
@@ -37,9 +37,12 @@ main{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+    background-image: linear-gradient(to bottom, rgb(255, 70, 3), rgba(255, 255, 0, 0.822)
+        );
 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 
 }
 
@@ -63,17 +66,43 @@ main{
 
 #formulario p{
     font-size: 0.8em;
+    padding: 1px;
+}
+.campo > input{
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 50px);
+    border-radius: 8px;
+    border: 0;
+    padding: 4px;
+    background-color: rgb(211, 166, 18);
+    transform: translateY(-8px);
+
 }
 
+.campo > input:focus-within{
+    background-color: white;
+
+}
+
+
 .campo{
-    background-color: rgba(255, 68, 0, 0.486);
+    background-image: linear-gradient(to right, rgb(167, 95, 36), rgb(211, 211, 11));
+    width: 100%;
     height:40px;
-    border-radius: 5px;
+    border: 2px solid white;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 form label{
     display: none;
+}
+
+.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
 }
 
 
@@ -82,14 +111,15 @@ input[type=submit]{
     font-size: 1em;
     width: 100%;
     height: 30px;
-    background-color: brown;
+    background-color: rgb(0, 0, 0);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    
 }
 input[type=submit]:hover{
-    background-color: rgba(165, 42, 42, 0.541);
+    background-color: rgba(175, 32, 32, 0.541);
 
 }
 
@@ -110,7 +140,7 @@ a.botao{
 
 }
 a.botao:hover{
-    background-color: rgba(165, 42, 42, 0.801);
+    background-color: rgba(136, 34, 34, 0.801);
 }
 
 a.botao i{
